# localbrisk

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  DEVELOPMENT.md  DEVELOPMENT_zh.md  README.md  README_zh.md  ROADMAP.md  build.bat  build.sh  dev.sh  package-lock.json  package.json  stock_volume_muyuan.py  tencent_stock_analysis.py  详细产品设计文档.md
backend/: architecture.md  localbrisk-backend.spec  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run.py
backend/agent_engine/: __init__.py
backend/agent_engine/core/: __init__.py  config.py  exceptions.py  response_schema.py  stream_protocol.py
backend/agent_engine/engine/: AGENTS.md  README.md  __init__.py  agent_context_loader.py  agent_loader.py  deepagents_backend.py  deepagents_context.py  deepagents_engine.py  deepagents_resources.py  default_prompt.py  handoff_registry.py  native_skill_registry.py  openai_agents_engine.py  workspace_factory.py
backend/agent_engine/llm/: __init__.py  client_factory.py  provider_adapter.py
backend/agent_engine/monitoring/: __init__.py  events.py  logging_context.py  metrics.py
backend/app/: __init__.py
backend/compute_engine/: __init__.py  duckdb_service.py
backend/tests/: __init__.py  conftest.py  test_business_unit_output_defaults.py  test_catalog_api.py  test_catalog_service.py  test_connectors.py  test_foreman_service.py  test_metadata_sync.py  test_models.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/: README.md
src-tauri/src/: backend.rs  commands.rs  file_ops.rs  logger.rs  main.rs  menu.rs  settings.rs
(+221 files in other folders)
